--- a/GTool.CB/Main.resx
+++ b/GTool.CB/Main.resx
@@ -128,7 +128,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAdJAAAAJNU0Z0AUkBTAIBARAB
-        AAF4AQABeAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAAXgDAAEBAQABIAYAAbT/
+        AAGgAQABoAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAAXgDAAEBAQABIAYAAbT/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8A/wC2AANVAapcAANVAapcAANVAapMAANVAaoCswGyAf8CsgGxAf8CsgGwAf8CsQGwAf8C
         sAGvAf8BsAGvAa4B/wKvAa0B/wKuAa0B/wGuAa0BrAH/Aa0BrAGrAf8CrAGqAf8BrAGrAaoB/wGrAaoB
@@ -761,5 +761,8 @@
   </metadata>
   <metadata name="OpenDBFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1166, 44</value>
+  </metadata>
+  <metadata name="SaveDBFile.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1282, 44</value>
   </metadata>
 </root>
